--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <application
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_thermometer"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_thermometer"
         android:supportsRtl="true"
@@ -24,6 +24,8 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
+                <category android:name="android.intent.category.BROWSABLE" />
+
                 <category android:name="android.intent.category.LAUNCHER"/>
                 <category android:name="android.intent.category.VOICE"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -34,7 +36,11 @@
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/select_device"
             android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
-            tools:targetApi="lollipop"/>
+            tools:targetApi="lollipop">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+            </intent-filter>
+        </activity>
         <activity
             android:name="valentin8dev.by.MeteoStation.AlarmDialog"
             android:configChanges="orientation|keyboardHidden"
